# c-utils

./: CMakeLists.txt
algorithms/: sort.c  sort.h
data-structures/: binaryheap.c  binaryheap.h  linkedlist.c  linkedlist.h
test/: test-binaryheap.cpp  test-linkedlist.cpp
test/algorithms/: test-sort.cpp
